--- a/CSJ2K.NetCore/CSJ2K.NetCore.csproj
+++ b/CSJ2K.NetCore/CSJ2K.NetCore.csproj
@@ -23,5 +23,6 @@
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.8" />
     <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.8" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.7" />
   </ItemGroup>
 </Project>
