Initial appveyor ci

--- a/codectest/codectest.csproj
+++ b/codectest/codectest.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>codectest</RootNamespace>
     <AssemblyName>codectest</AssemblyName>
     <Platform>AnyCPU</Platform>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
