Break SkiaSharp support off into its own library to support other Image libraries in the future.

--- a/codectest/codectest.csproj
+++ b/codectest/codectest.csproj
@@ -30,6 +30,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CoreJ2K.Skia\CoreJ2K.Skia.csproj" />
     <ProjectReference Include="..\CoreJ2K\CoreJ2K.csproj" />
   </ItemGroup>
   <ItemGroup>
