--- a/CoreJ2K/CoreJ2K.csproj
+++ b/CoreJ2K/CoreJ2K.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <AssemblyName>CoreJ2K</AssemblyName>
     <PackageId>CoreJ2K</PackageId>
+    <Description>.NETStandard JPEG-2000 codec library core support</Description>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
