Pack README.md and LICENSE files

--- a/CoreJ2K/CoreJ2K.csproj
+++ b/CoreJ2K/CoreJ2K.csproj
@@ -10,4 +10,9 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\COPYRIGHT-JJ2000-5.1" Pack="true" PackagePath="\" />
+  </ItemGroup>
 </Project>
