--- a/CoreJ2K.Skia/CoreJ2K.Skia.csproj
+++ b/CoreJ2K.Skia/CoreJ2K.Skia.csproj
@@ -11,7 +11,11 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="SkiaSharp" Version="2.88.8" />
+      <None Include="..\README.md" Pack="true" PackagePath="\" />
+      <None Include="..\LICENSE" Pack="true" PackagePath="\" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="SkiaSharp" Version="2.88.8" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\CoreJ2K\CoreJ2K.csproj" />
