--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,7 +48,7 @@ deploy:
   - provider: GitHub
     name: github_releases
     description: Release v$(appveyor_build_version)
-    tag: $(appveyor_build_version)
+    tag: $(appveyor_repo_tag_name)
     auth_token:
       secure: KPXQ74CJ+1aD3/H12JeVwMedPvcyr4aL9O/CFL8sGJHN/WZCYjKw92m8CodgO90D
     artifact: /.*CoreJ2K.*(\.|\.s)nupkg/
