--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
 		<Version>1.0.0.0</Version>
 		<Product>CoreJ2K</Product>
 		<Authors>Sjofn LLC</Authors>
-		<Copyright>Copyright © 1999-2000 JJ2000 Partners.Copyright © 2007-2012 Jason S. Clary. Copyright © 2013-2018 Anders Gustafsson, Cureos AB. Copyright © Sjofn LLC 2024. All rights reserved.</Copyright>
+		<Copyright>Copyright © 1999-2000 JJ2000 Partners.Copyright © 2007-2012 Jason S. Clary. Copyright © 2013-2018 Anders Gustafsson, Cureos AB. Copyright © Sjofn LLC 2024-2025. All rights reserved.</Copyright>
 		<Company>Sjofn LLC</Company>
 	</PropertyGroup>
 	<PropertyGroup>
