Small branding fixes

--- a/CoreJ2K.Skia/CoreJ2K.Skia.csproj
+++ b/CoreJ2K.Skia/CoreJ2K.Skia.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <AssemblyName>CoreJ2K.Skia</AssemblyName>
         <PackageId>CoreJ2K.Skia</PackageId>
-        <Description>.NETStandard JPEG-2000 codec library with Skia support</Description>
+        <Description>.NETStandard JPEG-2000 codec library with SkiaSharp support</Description>
         <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
         <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
         <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
