Remove Skia and Windows-specific image readers and projects Add ImageSharp support Add PublicAPI Annotations

--- a/CoreJ2K/CoreJ2K.csproj
+++ b/CoreJ2K/CoreJ2K.csproj
@@ -11,6 +11,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
     <None Include="..\LICENSE" Pack="true" PackagePath="\" />
     <None Include="..\COPYRIGHT-JJ2000-5.1" Pack="true" PackagePath="\" />
